# Pay_publicity_platform_Diplom_OB2

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirments.txt
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_blog_category_alter_blog_author.py  0004_alter_blog_is_subscribed.py  0005_blog_slug_alter_blog_is_subscribed.py  0006_alter_blog_options_alter_blog_author_and_more.py  0007_alter_blog_options.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  index.html  toggle.html
blog/templates/blog/includes/: inc_menu.html
config/: settings.py  urls.py
data_json/: blog_data.json  users_data.json
static/css/: carousel.css
users/: abra.html  admin.py  forms.py  models.py  services.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_phone_payment.py  0002_alter_user_phone.py  0003_payment.py  0003_user_is_otp_sent.py  0004_alter_payment_status.py  0004_alter_user_email.py
users/templates/users/: confirm_delete.html  login.html  new_password.html  otp_verify.html  password_reset.html  password_reset_request.html  payment_cancel.html  payment_success.html  register.html  subscribe.html  user_form.html
